hphp/test/slow/readonly_tdb/scope_switch_1.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'ROTDB\ScopeSwitch1\ro() returns readonly, but the caller expects a mutable value' in %s.php:34
Stack trace:
#0 {main}
